# chapka

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  data_models.py  log.py  main.py  pyproject.toml
backend/app/: client.py  endpoints.py  main.py  storage.py
backend/tests/: test_main.py
frontend/: Dockerfile  jest.config.ts  package-lock.json  package.json
frontend/__tests__/: page.test.tsx
frontend/app/: globals.css  layout.tsx  page.tsx
