[project]
name = "brainbay"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.133.1",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "ollama>=0.6.1",
    "ruff>=0.15.4",
    "uvicorn>=0.41.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["brainbay*"]

